@@ -12,37 +12,142 @@ asm(".code16gcc");
 typedef unsigned int	u32;
 typedef unsigned short	u16;
 typedef unsigned char	u8;
-typedef unsigned int	size_t;
+typedef u32				size_t;
+typedef u32				addr_t;
 
+/* Basic port I/O */
+static inline void outb(u8 v, u16 port)
+{
+	asm volatile("outb %0,%1" : : "a" (v), "dN" (port));
+}
+static inline u8 inb(u16 port)
+{
+	u8 v;
+	asm volatile("inb %1,%0" : "=a" (v) : "dN" (port));
+	return v;
+}
+
+static inline void outw(u16 v, u16 port)
+{
+	asm volatile("outw %0,%1" : : "a" (v), "dN" (port));
+}
+static inline u16 inw(u16 port)
+{
+	u16 v;
+	asm volatile("inw %1,%0" : "=a" (v) : "dN" (port));
+	return v;
+}
+
+static inline void outl(u32 v, u16 port)
+{
+	asm volatile("outl %0,%1" : : "a" (v), "dN" (port));
+}
+static inline u32 inl(u16 port)
+{
+	u32 v;
+	asm volatile("inl %1,%0" : "=a" (v) : "dN" (port));
+	return v;
+}
+/* About 1 microsecond */
+static inline void io_delay(void)
+{
+	const u16 DELAY_PORT = 0x80;
+	asm volatile("outb %%al,%0" : : "dN" (DELAY_PORT));
+}
+
+/* These functions are used to reference data in other segments. */
 static inline u16 ds(void)
 {
 	u16 seg;
-	__asm__("movw %%ds,%0" : "=rm" (seg));
+	asm("movw %%ds,%0" : "=rm" (seg));
 	return seg;
 }
 
 static inline void set_fs(u16 seg)
 {
-	__asm__ volatile("movw %0,%%fs" : : "rm" (seg));
+	asm volatile("movw %0,%%fs" : : "rm" (seg));
 }
 static inline u16 fs(void)
 {
 	u16 seg;
-	__asm__ volatile("movw %%fs,%0" : "=rm" (seg));
+	asm volatile("movw %%fs,%0" : "=rm" (seg));
 	return seg;
 }
 
 static inline void set_gs(u16 seg)
 {
-	__asm__ volatile("movw %0,%%gs" : : "rm" (seg));
+	asm volatile("movw %0,%%gs" : : "rm" (seg));
 }
 static inline u16 gs(void)
 {
 	u16 seg;
-	__asm__ volatile("movw %%gs,%0" : "=rm" (seg));
+	asm volatile("movw %%gs,%0" : "=rm" (seg));
 	return seg;
 }
 
+static inline u8 rdfs8(addr_t addr)
+{
+	u8 v;
+	asm volatile("movb %%fs:%1,%0" : "=q" (v) : "m" (*(u8 *)addr));
+	return v;
+}
+static inline u16 rdfs16(addr_t addr)
+{
+	u16 v;
+	asm volatile("movw %%fs:%1,%0" : "=r" (v) : "m" (*(u16 *)addr));
+	return v;
+}
+static inline u32 rdfs32(addr_t addr)
+{
+	u32 v;
+	asm volatile("movl %%fs:%1,%0" : "=r" (v) : "m" (*(u32 *)addr));
+	return v;
+}
+
+static inline void wrfs8(u8 v, addr_t addr)
+{
+	asm volatile("movb %1,%%fs:%0" : "+m" (*(u8 *)addr) : "qi" (v));
+}
+static inline void wrfs16(u16 v, addr_t addr)
+{
+	asm volatile("movw %1,%%fs:%0" : "+m" (*(u16 *)addr) : "ri" (v));
+}
+static inline void wrfs32(u32 v, addr_t addr)
+{
+	asm volatile("movl %1,%%fs:%0" : "+m" (*(u32 *)addr) : "ri" (v));
+}
+
+static inline u8 rdgs8(addr_t addr)
+{
+	u8 v;
+	asm volatile("movb %%gs:%1,%0" : "=q" (v) : "m" (*(u8 *)addr));
+	return v;
+}
+static inline u16 rdgs16(addr_t addr)
+{
+	u16 v;
+	asm volatile("movw %%gs:%1,%0" : "=r" (v) : "m" (*(u16 *)addr));
+	return v;
+}
+static inline u32 rdgs32(addr_t addr)
+{
+	u32 v;
+	asm volatile("movl %%gs:%1,%0" : "=r" (v) : "m" (*(u32 *)addr));
+	return v;
+}
+
+static inline void wrgs8(u8 v, addr_t addr)
+{
+	asm volatile("movb %1,%%gs:%0" : "+m" (*(u8 *)addr) : "qi" (v));
+}
+static inline void wrgs16(u16 v, addr_t addr)
+{
+	asm volatile("movw %1,%%gs:%0" : "+m" (*(u16 *)addr) : "ri" (v));
+}
+static inline void wrgs32(u32 v, addr_t addr)
+{
+	asm volatile("movl %1,%%gs:%0" : "+m" (*(u32 *)addr) : "ri" (v));
+}
 /*
 pusha:-->
  Push(EAX);
@@ -55,9 +160,6 @@ pusha:-->
  Push(EDI);
 */
 
-/*---------------------------------*/
-/* bioscall.S                      */
-/*---------------------------------*/
 struct biosregs {
 	union {
 		struct {
@@ -99,13 +201,18 @@ struct biosregs {
 	};
 };
 
-void intcall(unsigned char int_no, const struct biosregs *ireg, struct biosregs *oreg)
+/*---------------------------------*/
+/* bioscall.S                      */
+/*---------------------------------*/
+void intcall(u8 int_no, const struct biosregs *ireg, struct biosregs *oreg)
 __attribute__ ((regparm(3)));
  
+
 /*---------------------------------*/
 /* regs.c                          */
 /*---------------------------------*/
 void initregs(struct biosregs *regs);
+
 
 /*---------------------------------*/
 /* tty.c                           */
@@ -113,10 +220,21 @@ void initregs(struct biosregs *regs);
 void putchar(int ch);
 void puts(const char *str);
 
+
 /*---------------------------------*/
 /* printf.c                        */
 /*---------------------------------*/
 int sprintf(char *buf, const char *fmt, ...);
 int printf(const char *fmt, ...);
+
+
+/*---------------------------------*/
+/* a20.c                           */
+/*---------------------------------*/
+int enable_a20(void);
+
+
+
+
 
 #endif /* BOOT_BOOT_H */
