@@ -1,0 +1,70 @@
+#include <stdio.h>
+
+void (*foo)(int, int);
+
+void bar(int x, int y)
+{
+	int z = x+y;
+	z = 88;
+}
+
+int main()
+{
+	foo = bar;
+	foo(100,200);
+}
+
+
+	.file	"function_point.c"
+	.comm	foo,4,4
+	.text
+	.globl	bar
+	.type	bar, @function
+bar:
+.LFB0:
+	.cfi_startproc
+	pushl	%ebp
+	.cfi_def_cfa_offset 8
+	.cfi_offset 5, -8
+	movl	%esp, %ebp
+	.cfi_def_cfa_register 5
+	subl	$16, %esp
+	movl	12(%ebp), %eax
+	movl	8(%ebp), %edx
+	addl	%edx, %eax
+	movl	%eax, -4(%ebp)
+	movl	$88, -4(%ebp)
+	leave
+	.cfi_restore 5
+	.cfi_def_cfa 4, 4
+	ret
+	.cfi_endproc
+.LFE0:
+	.size	bar, .-bar
+	.globl	main
+	.type	main, @function
+main:
+.LFB1:
+	.cfi_startproc
+	pushl	%ebp
+	.cfi_def_cfa_offset 8
+	.cfi_offset 5, -8
+	movl	%esp, %ebp
+	.cfi_def_cfa_register 5
+	andl	$-16, %esp
+	subl	$16, %esp
+	movl	$bar, foo
+	movl	foo, %eax
+	movl	$200, 4(%esp)
+	movl	$100, (%esp)
+-----------------------------	
+-->	call	*%eax
+-----------------------------	
+	leave
+	.cfi_restore 5
+	.cfi_def_cfa 4, 4
+	ret
+	.cfi_endproc
+.LFE1:
+	.size	main, .-main
+	.ident	"GCC: (GNU) 4.7.2"
