@@ -87,3 +87,11 @@ it's not the bug's problem. It's my problem! I totally forgot what i said yerter
 Change the sectors of header need to be loaded into memory. The header this afternoon
 is about 3600 bytes, but bootsect.s only load 7 sectors, that's why.
 
+
+2015/04/21
+
+Today is my first time use IO port instruction! There is an interesting port: 0x80.
+Most systems use 0x80 to generate an IO delay. No matter read or write to this port,
+it won't have reaction, and we will get about 1 microsecond delay. Someone say this
+port is used by BIOS in POST.
+
